2010-10-03  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15859: sectionIndex doesn't work as supposed when TemplaVoila is used (Thanks to Steffen Kamper)

2010-09-28  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15837: % char in locallang label causes php warning
	* Follow-up to: #13974: HTML5 tag support - added missing styles
	* Follow-up to: #15670: content element preview in TV module for filelist can get very wide - wrong file inclusion fixed
	* Fixed issue: #14285: FCE: No hook for BE preview on "unknown" fields (Thanks to Alexander Opitz)
	* Fixed issue: #15775: Avoid that browser-cache issues cause too much confusion during upgrade 
	* Fixed issue: #15826: Non-admin fails to add new FCE to a page - pagemodule should show a warning

2010-09-23  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #14386: Static DS - Centralize access to datastructure / pt.4 - further refinement to hide useless elements
	* Fixed issue: #15779: Hook to influence how the subelement areas are composed 
	* Fixed issue: #14330: Localizing labels in beLayout (Thanks to Andreas Kiessling)
	* Fixed issue: #15777: Hook to restrict which elements are displayed 
	* Fixed issue: #12602: Sorting of template objects in page content

2010-09-22  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15571: Fatal PHP Error when try to insert new CEs in Page Module
	* Fixed issue: #15759: Section title and section fieldlabel are not through "$this->localizedFFLabel" (Thanks to KimPixel)
	* Fixed issue: #15762: beLayout Template from external files does not work 

2010-09-16  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #14386: Static DS - Centralize access to datastructure / pt.1  - workspace versions should not be selected in repositories
	* Fixed bug:	#15722: The create new template object-button is missing if there is no TO attached to a DS
	* Fixed issue: #15723: Wrong TypoScript path in documentation (Thanks to Bernhard Kraft)
