@@ -1,5 +1,6 @@
 2010-10-03  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
+	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - translation-text color fixed
 	* Fixed issue: #15859: sectionIndex doesn't work as supposed when TemplaVoila is used (Thanks to Steffen Kamper)
 
 2010-09-28  Tolleiv Nietsch <nietsch@aoemedia.de> 
